--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,17 @@ backports.zoneinfo==0.2.1
 charset-normalizer==3.0.1
 coreapi==2.3.3
 coreschema==0.0.4
-Django==4.1.5
+Django==3.2
 django-cors-headers==3.13.0
 django-filter==22.1
-djangorestframework==3.14.0
+djangorestframework==3.13.0
+djangorestframework-simplejwt==5.2.2
 idna==3.4
+install==1.3.5
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+PyJWT==1.7.1
 pytz==2022.7.1
 requests==2.28.2
 sqlparse==0.4.3
